AP-22975: send initial data via the initial data service to reduce number of RPC calls
AP-22975 (Send all initial data via the ScriptingNodeSettingsService)